# branch-fiction

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  README.md  book.html  index.css  index.html  new-book.html  package.json  path.html  pnpm-lock.yaml  pnpm-workspace.yaml  settings.html  tsconfig.json  vite.config.ts
.claude/: settings.json
e2e/: fixtures.ts  playwright.config.ts  tsconfig.json
scripts/: export-seed-book.mjs  fetch-deno.mjs  sign-extension.mjs
src/: path.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/extension_db_migrations/: 0001_init.sql
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_pipeline_steps.sql  0003_plugins.sql  0004_plugin_providers.sql  0005_pipeline_step_logs.sql  0006_book_imports_notifications_enabled.sql  0007_provider_models_reasoning.sql  0008_book_entity_extraction_checkpoints.sql  0009_pipeline_step_token_usage.sql  0010_plugins_bundled.sql  0011_plugins_provenance.sql  0012_plugin_providers_override_base_url.sql  0013_plugin_dev_clients.sql  0014_books_status.sql  0015_book_imports_eta.sql  0016_book_imports_cost.sql  0017_pipeline_step_usages_reasoning.sql  0018_book_imports_auto_confirm_calibration.sql  0019_providers_rpm_limit.sql  0020_book_imports_projection_behavior.sql  0021_book_imports_rename_auto_confirm.sql  0022_book_imports_text_model_bindings.sql  0023_rename_plugins_to_extensions.sql  0024_text_model_and_binding_model_key.sql  0025_book_imports_previous_in_series.sql  0026_extensions_signed.sql  0027_book_seeds.sql
src-tauri/seed-books/: README.md
src-tauri/src/: app_backup.rs  app_menu.rs  backup_crypto.rs  book_archive.rs  book_seeds.rs  bundled_extensions.rs  cloud_backup.rs  cloud_link.rs  cloud_state.rs  db_path.rs  epub_reader.rs  extension_assets.rs  extension_auth.rs  extension_data_proxy.rs  extension_db.rs  extension_dev.rs  extension_fetcher.rs  extension_installer.rs  extension_ports.rs  extension_proxy.rs  extension_runtime.rs  extension_sdk.rs  extension_signature.rs  extension_slots.rs  extension_task_sse.rs  html_to_markdown.rs  http_server.rs  import_db.rs  iroh_share.rs  keepawake.rs  langsmith.rs  lib.rs  main.rs  migrations.rs  phone_share.rs  pipeline_bridge.rs  pipeline_worker.rs  provider_catalog.rs  provider_proxy.rs  provider_resolve.rs  (+5 more)
(+153 files in other folders)
